[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.5.4"
itertools = "0.10.1"
ndarray = "0.15.4"
ndarray-stats = "0.5.0"
hashbrown = "0.11.2"
hex = "0.4.3"
bit-vec = "0.6.3"
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.73"
logging_timer = "1.0.0"
env_logger = "0.9.0"
named_tuple = "0.1.3"
combinations = "0.1.0"
nalgebra = "0.30.1"
ndarray-linalg = "0.14.1"